# embedSystem

./: .gitignore  CMakeLists.txt  Readme.md  main.cpp  tesst.cpp  test
cmake/: FindEMBEDSYSTEM.cmake  FindHIPE.cmake  FindOPENCV.cmake  FindPAHOMQTT.cmake  FindPARSE.cmake
command/: .nfs000000000030903000000006  .nfs00000000003093ed00000005  .nfs00000000003093ef00000004  app  build.sh  clean.sh  envsetup.sh  make.sh  softlink.sh
command/tools/: utils.sh
core/: CMakeLists.txt
core/console/: CMakeLists.txt
core/crypto/: CMakeLists.txt
core/crypto/aes/: CMakeLists.txt  test
core/eventbus/: nodes.hpp
core/log/: CMakeLists.txt  logger.hpp
core/mqttclient/: CMakeLists.txt  mqtt_client.cpp  mqtt_client.hpp  mqtt_handler.cpp  mqtt_handler.hpp  mqtttopic.hpp  test.cpp
core/parse/: CMakeLists.txt
core/system/: CMakeLists.txt  global.hpp  model  model.hpp  systemParam.cpp  systemParam.hpp
core/thread/: CMakeLists.txt  thread.cpp  thread.hpp  threadpool.cpp  threadpool.hpp  tst  txt
kernel_module/: README.md  modlue.mk
kernel_module/khadas/device-tree/: example.dts  kvim3_linux.dts
kernel_module/khadas/ko/: adxl345.ko  dtsof.ko  globalmem2.ko  hellodevice.ko  hellodriver.ko  i2c_adxl345.ko  led_sys.ko  oled12864.ko  pinctrl_test.ko  platformdevice.ko
kernel_module/khadas/module/: main.cpp
kernel_module/khadas/module/adxl345/: .adxl345.ko.cmd  .adxl345.mod.o.cmd  .adxl345.o.cmd  Makefile  adxl345.c  adxl345.h  adxl345.ko  adxl345.mod.c  modules.order
kernel_module/khadas/module/device/: .platformdevice.ko.cmd  .platformdevice.mod.o.cmd  .platformdevice.o.cmd  modules.order  platformdevice.c  platformdevice.mod.c
kernel_module/khadas/module/driver/: Makefile  platformdriver.c
kernel_module/khadas/module/dts_test/: .dtsof.ko.cmd  .dtsof.mod.o.cmd  .dtsof.o.cmd  Makefile  dts_led.c  dtsof.c  dtsof.mod.c  modules.order  test.c
kernel_module/khadas/module/globalmem/: .global_dev.ko.cmd  .global_dev.mod.o.cmd  .global_dev.o.cmd  .globalmem.ko.cmd  .globalmem.mod.o.cmd  .globalmem.o.cmd  .globalmem2.ko.cmd  .globalmem2.mod.o.cmd  .globalmem2.o.cmd  Makefile  global_dev.c  global_dev.ko  global_dev.mod.c  globalmem.c  globalmem.ko  globalmem.mod.c  globalmem2.mod.c  modules.order
kernel_module/khadas/module/gpiomodule/: .gpiotest.ko.cmd  .gpiotest.mod.o.cmd  .gpiotest.o.cmd  Makefile  gpiotest.c  gpiotest.ko  gpiotest.mod.c  modules.order
kernel_module/khadas/module/hellomodule/: .hello.ko.cmd  .hello.mod.o.cmd  .hello.o.cmd  .hellod.o.d  .hellodevice.ko.cmd  .hellodevice.mod.o.cmd  .hellodevice.o.cmd  .hellodriver.ko.cmd  .hellodriver.mod.o.cmd  .hellodriver.o.cmd  Makefile  \  hello.c  hello.cd  hello.ko  hello.mod.c  hellod.c  hellodevice.c  hellodriver.c  modules.order
kernel_module/khadas/module/i2c/: .i2c_lm75ad.ko.cmd  .i2c_lm75ad.mod.o.cmd  .i2c_lm75ad.o.cmd  Makefile  i2c_lm75ad.c  i2c_lm75ad.h  i2c_lm75ad.ko  i2c_lm75ad.mod.c  modules.order
kernel_module/khadas/module/lm75a/: .Makefile.swp  Makefile  (+9 more)
resources/model/: test.json
resources/system/: system.json
third/cp-abe/: CMakeLists.txt  LSSS.c  LSSS.h  Makefile  abe  abe.c  abe1.c  abeSetup.c  abeSetup.h  cmake_install.cmake  d.param  decrypt.c  decrypt.h  decryptTime.txt  elementIO.c  elementIO.h  encrypt.c  encrypt.h  keyGen.c  keyGen.h  miller.c  prime.data  setupPairingTime.txt  testOneOperate  testOneOperate.c  timeTateOrdinary.txt  timeTateSingular.txt  user.file
third/cp-abe/Alice/: K.key  Kx.key  L.key
third/cp-abe/Bob/: K.key  Kx.key  L.key
third/cp-abe/John/: K.key  Kx.key  L.key
third/cp-abe/MSK/: msk.key
third/cp-abe/Mary/: K.key  Kx.key  L.key
third/cp-abe/publicKey/: eGG.key  g.key  gA.key  hA.key  hB.key  hC.key  hD.key  hE.key
third/opencv2/: README.md  build.sh  main.cpp
third/opencv2/lib/: libopencv_aruco.so.4.5.5  libopencv_barcode.so.4.5.5  libopencv_bgsegm.so.4.5.5  libopencv_bioinspired.so.4.5.5  libopencv_calib3d.so.4.5.5  libopencv_ccalib.so.4.5.5  libopencv_datasets.so.4.5.5  libopencv_dnn_objdetect.so.4.5.5  libopencv_dnn_superres.so.4.5.5  libopencv_dpm.so.4.5.5  libopencv_face.so.4.5.5  libopencv_features2d.so.4.5.5  libopencv_flann.so.4.5.5  libopencv_freetype.so.4.5.5  libopencv_fuzzy.so.4.5.5  libopencv_hfs.so.4.5.5  libopencv_highgui.so.4.5.5  libopencv_img_hash.so.4.5.5  libopencv_imgcodecs.so.4.5.5  libopencv_intensity_transform.so.4.5.5  libopencv_line_descriptor.so.4.5.5  libopencv_mcc.so.4.5.5  libopencv_ml.so.4.5.5  libopencv_objdetect.so.4.5.5  libopencv_optflow.so.4.5.5  libopencv_phase_unwrapping.so.4.5.5  libopencv_photo.so.4.5.5  libopencv_plot.so.4.5.5  libopencv_quality.so.4.5.5  libopencv_rapid.so.4.5.5  libopencv_reg.so.4.5.5  libopencv_rgbd.so.4.5.5  libopencv_saliency.so.4.5.5  libopencv_shape.so.4.5.5  libopencv_stereo.so.4.5.5  libopencv_stitching.so.4.5.5  libopencv_structured_light.so.4.5.5  libopencv_superres.so.4.5.5  libopencv_surface_matching.so.4.5.5  libopencv_text.so.4.5.5  (+9 more)
third/pahoMqtt/lib/: libpaho-mqtt3a.so.1.3.8  libpaho-mqtt3as.so.1  libpaho-mqttpp3.so.1
utils/: CMakeLists.txt
utils/common/: CMakeLists.txt
utils/hash/: CMakeLists.txt  hash.cpp  hash.hpp
utils/mupdf/: README.md
utils/my_string/: CMakeLists.txt  my_string.cpp  my_string.hpp
utils/udp_piece/: CMakeLists.txt  VideoFramesender.c  VideoFramesender.h  circular_buffer.h  test.cpp  udp-piece.c  udp-piece.h
workspace/: CMakeLists.txt
workspace/Algorithm/: CMakeLists.txt  Capon.cpp  Capon.dsp  Capon.dsw  Capon.h  Capon.rc  CaponDlg.cpp  CaponDlg.h  My_capon.h  My_math.h  StdAfx.cpp  StdAfx.h  a.out  main.cpp  resource.h
workspace/Driver/: CMakeLists.txt  main.cpp
workspace/Slam_/: CMakeLists.txt  slam.cpp  slam.h  tcpp.cpp  tcpp.h
workspace/UtileTest/: CMakeLists.txt
workspace/UtileTest/C++/: test.cpp
workspace/UtileTest/Cjson/: CMakeLists.txt  bs.c  bs.h  cJsonFile.c  cJsonFile.h  global.h  mssage.c  mssage.h  socket.c  socket.h  thread.c  thread.h
workspace/UtileTest/Others/: CMakeLists.txt
(+53 files in other folders)
